// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MenuItem
  classes={
    Object {
      "isDisabled": "MenuItem-isDisabled-1",
    }
  }
  icon={null}
  isDisabled={false}
  redirectTo={[Function]}
  title="Title"
  url="/"
/>
`;

exports[`renders correctly disabled 1`] = `
<MenuItem
  classes={
    Object {
      "isDisabled": "MenuItem-isDisabled-1",
    }
  }
  icon={null}
  isDisabled={true}
  redirectTo={[Function]}
  title="Title"
  url="/"
/>
`;

exports[`renders correctly with icon 1`] = `
<MenuItem
  classes={
    Object {
      "isDisabled": "MenuItem-isDisabled-1",
    }
  }
  icon={
    Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "displayName": "AccessAlarmIcon",
      "muiName": "SvgIcon",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    }
  }
  isDisabled={false}
  redirectTo={[Function]}
  title="Title"
  url="/"
/>
`;
